# YOLO_Demo

./: .gitignore  README.md  main.py  pyproject.toml  videoObjectDetector.py
src/: main.py
src/recognize/: recognize_video.py  yolo_results_to_video.py
src/train/: train.py
src/utils/: extract_frames.py  infer_images.py  split_dataset.py
tests/: test_extract_frames.py  test_infer_images.py  test_recognize_video.py  test_yolo_results_to_video.py
