[project]
name = "yolo-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markupsafe==2.1.3",
    "pytest>=8.3.5",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "ultralytics>=8.3.115",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

[[tool.uv.index]]
url = "https://pypi.org/simple"

